Добавление основного функционала программы

--- a/Kursovaja/Kursovaja.csproj
+++ b/Kursovaja/Kursovaja.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Library\Library.csproj">
+      <Project>{88ab0f88-d390-46bf-81f2-2e8f14e0264b}</Project>
+      <Name>Library</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
